things are working now
